Fix for Bug 689895.  gx_put_blended_image_cmykspot was improperly inverting the alpha channel.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9308 a1074d23-0009-0410-80fe-cf8c14f379e6